fix: セキュリティ・OS依存を堅牢化(改善計画 Phase 2)
コマンドインジェクションと誤削除を防止し、エラー表示で内部実装が
漏れないようにし、ログ出力先を OS 別の標準ディレクトリに揃える。

- FileManagerService: Runtime.exec(String) を廃止し
  ProcessBuilder(List<String>) に全面移行 (4箇所)。空白・特殊文字を含む
  パスを安全に渡せ、コマンドインジェクションを防止
- FileDeleteService.isSystemFile: 文字列マッチを廃止し
  Path.startsWith() ベースの厳密判定に変更。OS 別の forbidden roots を
  起動時に toRealPath() で正規化、シンボリックリンク経由のすり抜けを防止
- FileDeleteService.deleteDirectoryRecursively: 失敗を集約し、1 件でも
  失敗があれば addSuppressed で IOException を伝播。部分削除で
  success を返さない (Files.walk も try-with-resources 化)
- MainController: e.getMessage() / getException().getMessage() の UI 直出し
  を全 7 箇所で撤去 (449/529 のダイアログ + 235/324/351/572/624/669/714 の
  statusLabel)。詳細は logger.error に残す
- MainApp: static イニシャライザで OS 別ログディレクトリを決定し
  LUMIDISK_LOG_DIR system property を設定 (mac: ~/Library/Logs/LumiDisk,
  win: %LOCALAPPDATA%/LumiDisk/logs, other: ~/.lumidisk/logs)
- logback.xml: ${LUMIDISK_LOG_DIR:-logs} を参照する形に変更

検証: gradle build PASS (Phase 1 の deprecation 警告も解消)

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>